# advent-of-code

./: .gitignore  Build.hs  Hashlife.hs  IntCodeST.hs  LICENSE  README.md  advent-of-code.cabal  cabal.project  flake.nix  fourmolu.yaml
.github/workflows/: cachix.yml
2016/: AOC2016.hs
2016/01/: solve.hs
2016/02/: solve.hs
2016/03/: part1.hs
2016/04/: part1.hs  part2.hs
2016/07/: main.hs
2016/08/: main.hs
2016/09/: main.hs
2016/1/: path.hs
2016/10/: main.hs
2016/11/: main  main.aux  main.hi  main.hp  main.hs  main.prof  main.ps
2016/12/: main.hs
2016/13/: main.hs
2016/14/: main  main.hi  main.hs
2016/15/: main.hs
2016/16/: main.hs
2016/17/: main.hs
2016/18/: main.hs
2016/19/: main  main.hi  main.hs
2016/2/: solve2.hs
2016/20/: main.hs
2016/21/: main.hs
2016/22/: main  main.hi  main.hs
2016/5/: main.hs
2016/6/: main.hs
2016/AOC2016/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs
2017/: 02.hs  03.hs  04.hs  05.hs  06.hs  07.hs  08.hs  09.hs  10.hs  11.hs  12.hs  13.hs  14.hs  15.hs  Knot.hs
2017/01/: main.hs
2017/input/: 08
2018/: #12.hs#  .#12.hs  .gitignore  01.hs  02.hs  03.hi  03.hs  04.hs  05.hs  06.hs  07.hs  08.hs  09.hs  10.hs  11.hs  12.hs  13.hs  14.hs  15.hs  16.hs  17.hs  18.hs  19.hs  20.hs  21.hs  22.hs  23.hs  24.hs  25.hs  AOC2018.hs  Tupfile
2018/AOC2018/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs
2018/Util/: Util.hs
2018/input/: #21.txt#
2019/: 01.hs  02.hs  03.hs  04.hs  05.hs  06.hs  07.hs  08.hs  09.hs  10.hs  11.hs  12.hs  13.hs  14.hs  15.hs  16.hs  17.hs  18.hs  19.hs  20.hs  21.hs  22.hs  23.hs  24.hs  25.hs  AOC2019.hs  AStar.hs  IntCode.hs  Util.hs
2019/AOC2019/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs
2019/input/: 01.txt
2020/: 01.hs  02.hs  03.hs  04.hs  05.hs  06.hs  07.hs  08.hs  09.hs  10.hs  11.hs  12.hs  13.hs  14.hs  15.hs  16.hs  17.hs  18.hs  AOC2020.hs  ParseT.hs  Printf.hs  RegexPCRE.hs  Scanf.hs  ScanfParser.hs  SymbolParser.hs  TScanf.hs  Util.hs  template.hs
2020/AOC2020/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day20.hs  Day21.hs  Day23.hs  Day25.hs
2020/Scanf/: Plugin.hs  Scanf.hs  Specifier.hs  Test.hs
2020/Util/: Text.hs
2020/app/: runner.hs
2020/src/: AOC2020.hs
2020/test/: Spec.hs
2021/: AOC2021.hs
2021/AOC2021/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs
2022/: AOC2022.hs
2022/AOC2022/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs
2023/: AOC2023.hs  aoc2023.cabal
2023/AOC2023/: Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day13.hs  Day14.hs  Day15.hs  Day19.hs  Day20.hs  Day23.hs
2023/src/: AOC2023.hs
2024/AOC2024/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs
2024/src/: AOC2024.hs
2025/: AOC2025.hs
2025/AOC2025/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs
app/: aoc2016.hs  aoc2018.hs  aoc2019.hs  aoc2021.hs  aoc2022.hs  aoc2024.hs  aoc2025.hs
bench/: aoc2016-bench.hs  aoc2018-bench.hs  aoc2019-bench.hs  aoc2020-bench.hs  aoc2021-bench.hs  aoc2022-bench.hs  aoc2024-bench.hs  aoc2025-bench.hs
bench-results/: default.nix
bench-results/2016/: day01.txt  day02.txt  day03.txt  day04.txt  day05.txt  day06.txt  day07.txt  day08.txt  day09.txt  day10.txt
bench-results/2018/: day01.txt  day02.txt  day03.txt  day04.txt  day05.txt  day06.txt  day07.txt  day08.txt  day09.txt  day10.txt  day11.txt  day12.txt  day13.txt  day14.txt  day15.txt  day16.txt  day17.txt  day18.txt  day19.txt  day20.txt  day21.txt  day22.txt  day23.txt  day24.txt  day25.txt
bench-results/2019/: day01.txt  day02.txt  day03.txt  day04.txt  day05.txt  day06.txt  day07.txt  day08.txt  day09.txt  day10.txt  day11.txt  day12.txt  day13.txt  day14.txt  day15.txt  day16.txt  day17.txt  day18.txt  day19.txt  day20.txt  day21.txt  day22.txt  day23.txt  day24.txt  day25.txt
bench-results/2020/: day01.txt  day02.txt  day03.txt  day04.txt  day05.txt  day06.txt  day07.txt  day08.txt  day09.txt  day10.txt  day11.txt  day12.txt  day13.txt  day14.txt  day15.txt  day16.txt  day17.txt  day18.txt  day19.txt  day20.txt  day21.txt  day22.txt  day23.txt  day24.txt  day25.txt
bench-results/2021/: day01.txt  day02.txt  day03.txt  day04.txt  day05.txt  day06.txt  day07.txt  day08.txt  day09.txt  (+8 more)
reflections/: default.nix
script/: generate_days.hs  open_files.vim
site/: Home-Page.md  default.nix
template/: DayXX.hs.template
test/: aoc2016-test.hs  aoc2018-test.hs  aoc2019-test.hs  aoc2021-test.hs  aoc2022-test.hs  aoc2023-test.hs  aoc2024-test.hs  aoc2025-test.hs
(+253 files in other folders)
