cabal-version:      2.4
name:               advent-of-code
version:            0.1.0.0
synopsis:           Advent of code runners and solvers
description:
  Runners and solvers (and input fetchers) for advent of code,
  over multiple years.

category:           Web
homepage:           https://github.com/mstksg/advent-of-code#readme
bug-reports:        https://github.com/mstksg/advent-of-code/issues
author:             Justin Le
maintainer:         justin@jle.im
copyright:          (c) Justin Le 2023
license:            MIT
license-file:       LICENSE
build-type:         Simple
extra-source-files:
  CHANGELOG.md
  README.md

source-repository head
  type:     git
  location: https://github.com/mstksg/advent-of-code.git

common common-options
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wno-partial-type-signatures

  if impl(ghc >=8.0)
    ghc-options: -Wredundant-constraints

  if impl(ghc >=8.2)
    ghc-options: -fhide-source-paths

  if impl(ghc >=8.4)
    ghc-options: -Wmissing-export-lists -Wpartial-fields

  if impl(ghc >=8.8)
    ghc-options: -Wmissing-deriving-strategies

  default-language: Haskell2010

library aoc-core
  import:          common-options
  build-depends:
    , advent-of-code-api    >=0.2.11
    , aeson
    , ansi-terminal
    , base                  >=4.7     && <5
    , bytestring
    , constraints
    , constraints-extras
    , containers
    , criterion
    , data-default-class
    , deepseq
    , dependent-sum
    , directory
    , filepath
    , haskeline
    , megaparsec
    , microlens
    , microlens-th
    , mtl
    , optparse-applicative
    , pandoc
    , parser-combinators
    , tagsoup
    , template-haskell
    , text
    , th-abstraction
    , time
    , transformers
    , yaml

  exposed-modules:
    AOC.Discover
    AOC.Main.Bench
    AOC.Main.Runner
    AOC.Main.Spec
    AOC.Run
    AOC.Run.Config
    AOC.Run.Interactive
    AOC.Run.Load
    AOC.Solver
    AOC.Util
    AOC.Util.DynoMap

  hs-source-dirs:  core

common solver-extensions
  default-extensions:
    AllowAmbiguousTypes
    ApplicativeDo
    BangPatterns
    BlockArguments
    DataKinds
    DeriveAnyClass
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    ImplicitParams
    KindSignatures
    LambdaCase
    MonadComprehensions
    MultiParamTypeClasses
    MultiWayIf
    NoStarIsType
    NumDecimals
    NumericUnderscores
    OverloadedLabels
    OverloadedStrings
    ParallelListComp
    PartialTypeSignatures
    PatternGuards
    PatternSynonyms
    PolyKinds
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    UndecidableInstances
    ViewPatterns

library aoc-common
  import:          common-options
  import:          solver-extensions
  build-depends:
    , adjunctions
    , advent-of-code-ocr
    , aoc-core
    , base                       >=4.7 && <5
    , bitvec
    , comonad
    , containers
    , data-memocombinators
    , deepseq
    , fgl
    , fin
    , finitary
    , finite-typelits
    , foldl
    , free
    , generic-lens
    , ghc-typelits-natnormalise
    , groups
    , hashable
    , lens
    , linear
    , megaparsec
    , mtl
    , nonempty-containers
    , parallel
    , parser-combinators
    , psqueues
    , recursion-schemes
    , safe
    , semigroupoids
    , split
    , strict-tuple
    , text
    , time
    , transformers
    , vector
    , vector-algorithms
    , vector-sized
    , witherable

  exposed-modules:
    AOC.Common
    AOC.Common.FinitarySet
    AOC.Common.Parser
    AOC.Common.Point
    AOC.Common.Search
    AOC.Prelude

  hs-source-dirs:  common

common solver-deps
  build-depends:
    , adjunctions
    , aoc-common
    , aoc-core
    , arithmoi
    , barbies
    , base                       >=4.7   && <5
    , bitvec
    , bytestring
    , comonad
    , conduino                   >=0.2.4
    , containers
    , crypton
    , data-default
    , data-default-class
    , data-fix
    , data-interval
    , data-memocombinators
    , deepseq
    , distributive
    , dlist
    , ghc-typelits-knownnat
    , extended-reals
    , fgl
    , fin
    , finitary
    , finite-typelits
    , foldl
    , free
    , free-algebras
    , generic-lens
    , ghc-typelits-natnormalise
    , graphviz
    , grid
    , groups
    , hashable
    , lens
    , linear
    , logict
    , megaparsec
    , memory
    , microlens-th
    , monad-loops
    , monoid-extras
    , monoidal-containers
    , mtl
    , nonempty-containers
    , parallel
    , parsec
    , parser-combinators
    , pointedlist
    , primitive
    , profunctors
    , psqueues
    , recursion-schemes
    , refined
    , safe
    , semialign
    , semigroupoids
    , semirings
    , split
    , statistics
    , strict-tuple
    , text
    , these
    , transformers
    , unordered-containers
    , vec
    , vector
    , vector-algorithms
    , vector-sized
    , vty
    , vty-crossplatform
    , witherable

common executable-options
  import:      common-options
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -O2

-- 2016

library aoc2016-lib
  import:          common-options
  import:          solver-extensions
  import:          solver-deps
  exposed-modules:
    AOC2016
    AOC2016.Day01
    AOC2016.Day02
    AOC2016.Day03
    AOC2016.Day04
    AOC2016.Day05
    AOC2016.Day06
    AOC2016.Day07
    AOC2016.Day08
    AOC2016.Day09
    AOC2016.Day10
    AOC2016.Day11
    AOC2016.Day12
    AOC2016.Day13
    AOC2016.Day14
    AOC2016.Day15
    AOC2016.Day16
    AOC2016.Day17
    AOC2016.Day18
    AOC2016.Day19
    AOC2016.Day20
    AOC2016.Day21
    AOC2016.Day22
    AOC2016.Day23
    AOC2016.Day24
    AOC2016.Day25

  hs-source-dirs:  2016

executable aoc2016
  import:         executable-options
  main-is:        aoc2016.hs
  hs-source-dirs: app
  build-depends:
    , ansi-terminal
    , aoc-core
    , aoc2016-lib
    , base           >=4.7 && <5

test-suite aoc2016-test
  import:         executable-options
  type:           exitcode-stdio-1.0
  main-is:        aoc2016-test.hs
  hs-source-dirs: test
  build-depends:
    , ansi-terminal
    , aoc-core
    , aoc2016-lib
    , base           >=4.7 && <5

benchmark aoc2016-bench
  import:         executable-options
  type:           exitcode-stdio-1.0
  main-is:        aoc2016-bench.hs
  hs-source-dirs: bench
  build-depends:
    , ansi-terminal
    , aoc-core
    , aoc2016-lib
    , base           >=4.7 && <5

-- 2018

library aoc2018-lib
  import:          common-options
  import:          solver-extensions
  import:          solver-deps
  exposed-modules:
    AOC2018
    AOC2018.Common.Elfcode
    AOC2018.Day01
    AOC2018.Day02
    AOC2018.Day03
    AOC2018.Day04
    AOC2018.Day05
    AOC2018.Day06
    AOC2018.Day07
    AOC2018.Day08
    AOC2018.Day09
    AOC2018.Day10
    AOC2018.Day11
    AOC2018.Day12
    AOC2018.Day13
    AOC2018.Day14
    AOC2018.Day15
    AOC2018.Day16
    AOC2018.Day17
    AOC2018.Day18
    AOC2018.Day19
    AOC2018.Day20
    AOC2018.Day21
    AOC2018.Day22
    AOC2018.Day23
    AOC2018.Day24
    AOC2018.Day25

  hs-source-dirs:  2018

executable aoc2018
  import:         executable-options
  main-is:        aoc2018.hs
  hs-source-dirs: app
  build-depends:
    , ansi-terminal
    , aoc-core
    , aoc2018-lib
    , base           >=4.7 && <5

test-suite aoc2018-test
  import:         executable-options
  type:           exitcode-stdio-1.0
  main-is:        aoc2018-test.hs
  hs-source-dirs: test
  build-depends:
    , ansi-terminal
    , aoc-core
    , aoc2018-lib
    , base           >=4.7 && <5

benchmark aoc2018-bench
  import:         executable-options
  type:           exitcode-stdio-1.0
  main-is:        aoc2018-bench.hs
  hs-source-dirs: bench
  build-depends:
    , ansi-terminal
    , aoc-core
    , aoc2018-lib
    , base           >=4.7 && <5

-- 2019

library aoc2019-lib
  import:          common-options
  import:          solver-extensions
  import:          solver-deps
  exposed-modules:
    AOC2019
    AOC2019.Common.Intcode
    AOC2019.Common.Intcode.Memory
    AOC2019.Common.Subset
    AOC2019.Day01
    AOC2019.Day02
    AOC2019.Day03
    AOC2019.Day04
    AOC2019.Day05
    AOC2019.Day06
    AOC2019.Day07
    AOC2019.Day08
    AOC2019.Day09
    AOC2019.Day10
    AOC2019.Day11
    AOC2019.Day12
    AOC2019.Day13
    AOC2019.Day14
    AOC2019.Day15
    AOC2019.Day16
    AOC2019.Day17
    AOC2019.Day18
    AOC2019.Day19
    AOC2019.Day20
    AOC2019.Day21
    AOC2019.Day22
    AOC2019.Day23
    AOC2019.Day24
    AOC2019.Day25

  hs-source-dirs:  2019

executable aoc2019
  import:         executable-options
  main-is:        aoc2019.hs
  hs-source-dirs: app
  build-depends:
    , ansi-terminal
    , aoc-core
    , aoc2019-lib
    , base           >=4.7 && <5

test-suite aoc2019-test
  import:         executable-options
  type:           exitcode-stdio-1.0
  main-is:        aoc2019-test.hs
  hs-source-dirs: test
  build-depends:
    , ansi-terminal
    , aoc-core
    , aoc2019-lib
    , base           >=4.7 && <5

benchmark aoc2019-bench
  import:         executable-options
  type:           exitcode-stdio-1.0
  main-is:        aoc2019-bench.hs
  hs-source-dirs: bench
  build-depends:
    , ansi-terminal
    , aoc-core
    , aoc2019-lib
    , base           >=4.7 && <5

-- 2020

library aoc2020-lib
  import:          common-options
  import:          solver-extensions
  import:          solver-deps
  exposed-modules:
    AOC2020
    AOC2020.Day01
    AOC2020.Day02
    AOC2020.Day03
    AOC2020.Day04
    AOC2020.Day05
    AOC2020.Day06
    AOC2020.Day07
    AOC2020.Day08
    AOC2020.Day09
    AOC2020.Day10
    AOC2020.Day11
    AOC2020.Day12
    AOC2020.Day13
    AOC2020.Day14
    AOC2020.Day15
    AOC2020.Day16
    AOC2020.Day17
    AOC2020.Day18
    AOC2020.Day19
    AOC2020.Day20
    AOC2020.Day21
    AOC2020.Day22
    AOC2020.Day23
    AOC2020.Day24
    AOC2020.Day25

  hs-source-dirs:  2020

executable aoc2020
  import:         executable-options
  main-is:        aoc2020.hs
  hs-source-dirs: app
  build-depends:
    , ansi-terminal
    , aoc-core
    , aoc2020-lib
    , base           >=4.7 && <5

test-suite aoc2020-test
  import:         executable-options
  type:           exitcode-stdio-1.0
  main-is:        aoc2020-test.hs
  hs-source-dirs: test
  build-depends:
    , ansi-terminal
    , aoc-core
    , aoc2020-lib
    , base           >=4.7 && <5

benchmark aoc2020-bench
  import:         executable-options
  type:           exitcode-stdio-1.0
  main-is:        aoc2020-bench.hs
  hs-source-dirs: bench
  build-depends:
    , ansi-terminal
    , aoc-core
    , aoc2020-lib
    , base           >=4.7 && <5

-- 2021

library aoc2021-lib
  import:          common-options
  import:          solver-extensions
  import:          solver-deps
  exposed-modules:
    AOC2021
    AOC2021.Day01
    AOC2021.Day02
    AOC2021.Day03
    AOC2021.Day04
    AOC2021.Day05
    AOC2021.Day06
    AOC2021.Day07
    AOC2021.Day08
    AOC2021.Day09
    AOC2021.Day10
    AOC2021.Day11
    AOC2021.Day12
    AOC2021.Day13
    AOC2021.Day14
    AOC2021.Day15
    AOC2021.Day16
    AOC2021.Day17
    AOC2021.Day18
    AOC2021.Day19
    AOC2021.Day20
    AOC2021.Day21
    AOC2021.Day22
    AOC2021.Day23
    AOC2021.Day24
    AOC2021.Day25

  hs-source-dirs:  2021

executable aoc2021
  import:         executable-options
  main-is:        aoc2021.hs
  hs-source-dirs: app
  build-depends:
    , ansi-terminal
    , aoc-core
    , aoc2021-lib
    , base           >=4.7 && <5

test-suite aoc2021-test
  import:         executable-options
  type:           exitcode-stdio-1.0
  main-is:        aoc2021-test.hs
  hs-source-dirs: test
  build-depends:
    , ansi-terminal
    , aoc-core
    , aoc2021-lib
    , base           >=4.7 && <5

benchmark aoc2021-bench
  import:         executable-options
  type:           exitcode-stdio-1.0
  main-is:        aoc2021-bench.hs
  hs-source-dirs: bench
  build-depends:
    , ansi-terminal
    , aoc-core
    , aoc2021-lib
    , base           >=4.7 && <5

-- 2022

library aoc2022-lib
  import:          common-options
  import:          solver-extensions
  import:          solver-deps
  exposed-modules:
    AOC2022
    AOC2022.Day01
    AOC2022.Day02
    AOC2022.Day03
    AOC2022.Day04
    AOC2022.Day05
    AOC2022.Day06
    AOC2022.Day07
    AOC2022.Day08
    AOC2022.Day09
    AOC2022.Day10
    AOC2022.Day11
    AOC2022.Day12
    AOC2022.Day13
    AOC2022.Day14
    AOC2022.Day15
    AOC2022.Day16
    AOC2022.Day17
    AOC2022.Day18
    AOC2022.Day19
    AOC2022.Day20
    AOC2022.Day21
    AOC2022.Day22
    AOC2022.Day23
    AOC2022.Day24
    AOC2022.Day25

  hs-source-dirs:  2022

executable aoc2022
  import:         executable-options
  main-is:        aoc2022.hs
  hs-source-dirs: app
  build-depends:
    , ansi-terminal
    , aoc-core
    , aoc2022-lib
    , base           >=4.7 && <5

test-suite aoc2022-test
  import:         executable-options
  type:           exitcode-stdio-1.0
  main-is:        aoc2022-test.hs
  hs-source-dirs: test
  build-depends:
    , ansi-terminal
    , aoc-core
    , aoc2022-lib
    , base           >=4.7 && <5

benchmark aoc2022-bench
  import:         executable-options
  type:           exitcode-stdio-1.0
  main-is:        aoc2022-bench.hs
  hs-source-dirs: bench
  build-depends:
    , ansi-terminal
    , aoc-core
    , aoc2022-lib
    , base           >=4.7 && <5

-- 2023

library aoc2023-lib
  import:          common-options
  import:          solver-extensions
  import:          solver-deps
  exposed-modules:
    AOC2023
    AOC2023.Day01
    AOC2023.Day02
    AOC2023.Day03
    AOC2023.Day04
    AOC2023.Day05
    AOC2023.Day06
    AOC2023.Day07
    AOC2023.Day08
    AOC2023.Day09
    AOC2023.Day10
    AOC2023.Day11
    AOC2023.Day12
    AOC2023.Day13
    AOC2023.Day14
    AOC2023.Day15
    AOC2023.Day16
    AOC2023.Day17
    AOC2023.Day18
    AOC2023.Day19
    AOC2023.Day20
    AOC2023.Day21
    AOC2023.Day22
    AOC2023.Day23
    AOC2023.Day24
    AOC2023.Day25

  hs-source-dirs:  2023

executable aoc2023
  import:         executable-options
  main-is:        aoc2023.hs
  hs-source-dirs: app
  build-depends:
    , ansi-terminal
    , aoc-core
    , aoc2023-lib
    , base           >=4.7 && <5

test-suite aoc2023-test
  import:         executable-options
  type:           exitcode-stdio-1.0
  main-is:        aoc2023-test.hs
  hs-source-dirs: test
  build-depends:
    , ansi-terminal
    , aoc-core
    , aoc2023-lib
    , base           >=4.7 && <5

benchmark aoc2023-bench
  import:         executable-options
  type:           exitcode-stdio-1.0
  main-is:        aoc2023-bench.hs
  hs-source-dirs: bench
  build-depends:
    , ansi-terminal
    , aoc-core
    , aoc2023-lib
    , base           >=4.7 && <5

-- 2024

library aoc2024-lib
  import:          common-options
  import:          solver-extensions
  import:          solver-deps
  exposed-modules:
    AOC2024
    AOC2024.Day01
    AOC2024.Day02
    AOC2024.Day03
    AOC2024.Day04
    AOC2024.Day05
    AOC2024.Day06
    AOC2024.Day07
    AOC2024.Day08
    AOC2024.Day09
    AOC2024.Day10
    AOC2024.Day11
    AOC2024.Day12
    AOC2024.Day13
    AOC2024.Day14
    AOC2024.Day15
    AOC2024.Day16
    AOC2024.Day17
    AOC2024.Day18
    AOC2024.Day19
    AOC2024.Day20
    AOC2024.Day21
    AOC2024.Day22
    AOC2024.Day23
    AOC2024.Day24
    AOC2024.Day25

  hs-source-dirs:  2024

executable aoc2024
  import:         executable-options
  main-is:        aoc2024.hs
  hs-source-dirs: app
  build-depends:
    , ansi-terminal
    , aoc-core
    , aoc2024-lib
    , base           >=4.7 && <5

test-suite aoc2024-test
  import:         executable-options
  type:           exitcode-stdio-1.0
  main-is:        aoc2024-test.hs
  hs-source-dirs: test
  build-depends:
    , ansi-terminal
    , aoc-core
    , aoc2024-lib
    , base           >=4.7 && <5

benchmark aoc2024-bench
  import:         executable-options
  type:           exitcode-stdio-1.0
  main-is:        aoc2024-bench.hs
  hs-source-dirs: bench
  build-depends:
    , ansi-terminal
    , aoc-core
    , aoc2024-lib
    , base           >=4.7 && <5

-- 2025

library aoc2025-lib
  import:          common-options
  import:          solver-extensions
  import:          solver-deps
  exposed-modules:
    AOC2025
    AOC2025.Day01
    AOC2025.Day02
    AOC2025.Day03
    AOC2025.Day04
    AOC2025.Day05
    AOC2025.Day06
    AOC2025.Day07
    AOC2025.Day08
    AOC2025.Day09
    AOC2025.Day10
    AOC2025.Day11
    AOC2025.Day12

  hs-source-dirs:  2025

executable aoc2025
  import:         executable-options
  main-is:        aoc2025.hs
  hs-source-dirs: app
  build-depends:
    , ansi-terminal
    , aoc-core
    , aoc2025-lib
    , base           >=4.7 && <5

test-suite aoc2025-test
  import:         executable-options
  type:           exitcode-stdio-1.0
  main-is:        aoc2025-test.hs
  hs-source-dirs: test
  build-depends:
    , ansi-terminal
    , aoc-core
    , aoc2025-lib
    , base           >=4.7 && <5

benchmark aoc2025-bench
  import:         executable-options
  type:           exitcode-stdio-1.0
  main-is:        aoc2025-bench.hs
  hs-source-dirs: bench
  build-depends:
    , ansi-terminal
    , aoc-core
    , aoc2025-lib
    , base           >=4.7 && <5
